# zephyrveil

./: .gitignore  LICENSE  README.md  config.toml.age  pyproject.toml  requirements.txt
src/zephyrveil/: __init__.py  __main__.py  cli.py  main.py
src/zephyrveil/auditor/: __init__.py  cve_check.py  doctor.py  hygiene_check.py  network_info.py  system_health.py  tool_checker.py
src/zephyrveil/config/: __init__.py  settings.py
src/zephyrveil/console/: __init__.py  banner.py  output.py  prompt.py
src/zephyrveil/detector/: __init__.py  threat_engine.py
src/zephyrveil/integrations/: __init__.py  abuseipdb.py  fail2ban.py  ipinfo.py  shodan.py  telegram.py  virustotal.py
src/zephyrveil/modules/: __init__.py  alerts.py  base.py  doctor.py  health.py  ip.py  log.py  report.py  scan.py
src/zephyrveil/parser/: __init__.py  auth_parser.py  journal_parser.py
src/zephyrveil/reporter/: __init__.py  html_report.py  json_report.py  pdf_report.py
src/zephyrveil/storage/: db.py
